# inbody-api-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  publish.yml
src/inbody_api_mcp/: __init__.py  client.py  server.py
