[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inbody-api-mcp"
version = "0.1.0"
description = "MCP server for InBody body-composition data using the mobile REST API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Randy" },
]
keywords = ["inbody", "mcp", "health", "body-composition", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
inbody-api-mcp = "inbody_api_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inbody_api_mcp"]
